# DBUS-BLE-Connection

./: CMakeLists.txt  README.md
embeded/: CMakeLists.txt  main.cpp
framework/: CMakeLists.txt
include/BLEFramework/: BLEManager.h  BLETypes.h  PipeManager.h  Utils.h
src/: BLEManager.cpp  BLEManager.h  BLETypes.h  CharacteristicManager.cpp  CharacteristicManager.h  DbusConnection.cpp  DbusConnection.h  DeviceManager.cpp  DeviceManager.h  ESP32PipeManager.cpp  ESP32PipeManager.h  PipeManager.cpp  Utils.cpp  Utils.h  main.cpp
test/: CMakeLists.txt  main.cpp
